# axum-test

./: Cargo.toml
.github/workflows/: build-and-push-orchestration.yml
.gitub/workflows/: build-and-push-node.yml
node/: Cargo.toml
node/src/: config.rs  structs.rs
orchestration/: Cargo.toml
orchestration/src/: config.rs
