[workspace]
resolver = "3"
members = ["node","orchestration"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"


[workspace.dependencies]
axum = "0.8.6"
clap = { version = "4.5.51", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = {version = "1.48.0", features = ["rt-multi-thread"]}
tower-http = {version = "0.6.6", features = ["set-header"]}
node = {path = "node"}
orchestration = {path = "orchestration"}
reqwest = {version = "0.12.24", features = ["json"]}
futures = "0.3.31"
serde_json = "1.0.145"
eyre = "0.6.12"
