[package]
name = "orchestration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
clap.workspace = true
serde.workspace = true
tokio.workspace = true
tower-http.workspace = true
node.workspace = true
reqwest.workspace = true
futures.workspace = true
serde_json.workspace = true
eyre.workspace = true
